k8s_operations/ingress/gke-webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
spec:
 defaultBackend:
    service:
      name: fleetman-webapp
      port:
        number: 80
 rules:
  - http:
      paths:
      - path: /webapp
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
      - path: /queue
        pathType: Prefix
        backend:
          service:
            name: fleetman-queue
            port:
              number: 8161
