k8s_operations/ingress/webapp-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-routing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 defaultBackend:
    service:
      name: fleetman-webapp
      port:
        number: 80
 rules:
  - http:
      paths:
      - path: /webapp
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
  - http:
        paths:
          - pathType: Prefix
            path: /queue
            backend:
              service: 
                name: fleetman-queue
                port:
                 number: 8161
